--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -11,7 +11,12 @@
     <div class='form-area'>
       <form action="" method="POST" enctype="multipart/form-data" class="update-form">
         {% csrf_token %}
+
         <ul class="form-list">
+          <li>
+            <label for="nickname">닉네임</label>
+            {% render_field form.nickname %}
+          </li>
           <li>
             <label for="first_name">이름</label>
             {% render_field form.first_name %}
@@ -24,9 +29,26 @@
             <label for="email">이메일</label>
             {% render_field form.email %}
           </li>
-          <li>
-            <label for="profile_image">프로필 이미지</label>
-            {% render_field form.profile_image %}
+          <li class="img-edit">
+            <label for="profile">프로필 이미지</label>
+            {% if user.profile_image %}
+              <div class="prof_img">
+                <img src="{{user.profile_image.url}}" alt="">
+              </div>
+              <label for="file" class="upload-btn">
+                <i class="bi bi-card-image"></i>
+                <span>
+                  사진수정하기</span>
+              </label>
+              <input type="file" accept="image/*" name="profile_image" id="file"/>
+            {% else %}
+              <label for="file" class="upload-btn">
+                <i class="bi bi-card-image"></i>
+                <span>
+                  사진등록하기</span>
+              </label>
+              <input type="file" accept="image/*" name="profile_image" id="file"/>
+            {% endif %}
           </li>
         </ul>
         <a class="btnC btnS " href="{% url 'accounts:changeps' %}">비밀번호 변경</a>
