--- a/static/styles/review_modal.css
+++ b/static/styles/review_modal.css
@@ -4,7 +4,8 @@
 	--rate: #ffd61e;
 	--gr: #f1f1f1;
 }
-.btnC {
+#review .btnC,
+#qna .btnC {
 	background: var(--main);
 	color: var(--bg);
 	border-radius: 0.2rem;
@@ -13,7 +14,8 @@
 	cursor: pointer;
 }
 
-.btnC:hover {
+#review .btnC:hover,
+#qna .btnC:hover {
 	background: var(--main-sub);
 }
 
@@ -23,7 +25,7 @@
 }
 .modalC {
 	position: absolute;
-	top: 50%;
+	top: 50vh;
 	left: 50%;
 	transform: translate(-50%, -30%);
 	max-width: 80rem;
@@ -37,8 +39,8 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	width: 100vh;
+	height: 100vw;
 	background-color: rgba(0, 0, 0, 0.5);
 	backdrop-filter: blur(4px);
 	z-index: 100;
