url연결 1차 수정

--- a/accounts/templates/accounts/wishlist.html
+++ b/accounts/templates/accounts/wishlist.html
@@ -16,7 +16,7 @@
     <body>
       <section class="containers">
         <p class="title text-center fw-semibold">
-          <span class="title__user">user</span>
+          <span class="title__user">{{ users.nickname }}</span>
           님의 Wish List
         </p>
         <!-- 버튼 -->
@@ -39,37 +39,6 @@
               </a>
             {% endfor %}
           {% endif %}
-
-          <li class="wishlist__box">
-            <input class="checkbox" type="checkbox" name="answer[]" id="opt-in"/>
-            <img class="wishlist__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/482/B004820641.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="wishlist-img"/>
-            <p class="wishlist__title">아이코닉 2023 두줄 다이어리</p>
-            <p class="wishlist__price">10,880원</p>
-          </li>
-          <li class="wishlist__box">
-            <input class="checkbox" type="checkbox" name="answer[]" id="opt-in"/>
-            <img class="wishlist__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/482/B004820641.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="wishlist-img"/>
-            <p class="wishlist__title">아이코닉 2023 두줄 다이어리</p>
-            <p class="wishlist__price">10,880원</p>
-          </li>
-          <li class="wishlist__box">
-            <input class="checkbox" type="checkbox" name="answer[]" id="opt-in"/>
-            <img class="wishlist__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/482/B004820641.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="wishlist-img"/>
-            <p class="wishlist__title">아이코닉 2023 두줄 다이어리</p>
-            <p class="wishlist__price">10,880원</p>
-          </li>
-          <li class="wishlist__box">
-            <input class="checkbox" type="checkbox" name="answer[]" id="opt-in"/>
-            <img class="wishlist__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/482/B004820641.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="wishlist-img"/>
-            <p class="wishlist__title">아이코닉 2023 두줄 다이어리</p>
-            <p class="wishlist__price">10,880원</p>
-          </li>
-          <li class="wishlist__box">
-            <input class="checkbox" type="checkbox" name="answer[]" id="opt-in"/>
-            <img class="wishlist__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/482/B004820641.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="wishlist-img"/>
-            <p class="wishlist__title">아이코닉 2023 두줄 다이어리</p>
-            <p class="wishlist__price">10,880원</p>
-          </li>
         </ul>
         <div class="ment text-center">
           <p class="info">
