--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -2,17 +2,19 @@
 {% load static %}
 
 {% block body %}
-  <h1>회원 목록</h1>
   <div class="container">
+    <h1>회원 목록</h1>
     {% for user in users %}
-      <div class="card my-3" style="width: 300px;">
-        <img class="card-img-top" src="{{ user.profile_image1 }}" style="width: 100px; height: 100px;" alt="Title">
-        <div class="card-body">
-          <h4 class="card-title">유저 이름:
-            {{ user.username }}</h4>
-          <p class="card-text">Text</p>
+      <a href="{% url 'accounts:detail' user.pk %}">
+        <div class="card my-3" style="width: 300px;">
+          <img class="card-img-top" src="{{ user.profile_image1 }}" style="width: 100px; height: 100px;" alt="Title">
+          <div class="card-body">
+            <h4 class="card-title">유저 이름:
+              {{ user.username }}</h4>
+            <p class="card-text">Text</p>
+          </div>
         </div>
-      </div>
+      </a>
     {% endfor %}
   </div>
   <h1>Navbar에 들어갈 내용들</h1>
