account profile-image 노출 수정

--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -25,7 +25,7 @@
         <div class="profile__container rounded">
           <div class="profile__content">
             <div>
-              <img class="profile__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/491/B004917674.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="profile-img"/>
+              <img class="profile__img" src="{{ user.profile_image.url }}" alt="profile-img"/>
               <p class="ms-3 mt-3">
                 <span class="profile__name">{{ user.nickname }}</span>
                 님</p>
