--- a/accounts/templates/accounts/wishlist.html
+++ b/accounts/templates/accounts/wishlist.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load humanize %}
 
 {% block body %}
   <!DOCTYPE html>
@@ -34,7 +35,7 @@
                   <input class="checkbox" type="checkbox" name="answer[]" id="opt-in"/>
                   <img class="wishlist__img" src="{{ product.product_image.all.first.image.url }}" alt="wishlist-img"/>
                   <p class="wishlist__title">{{ product.name }}</p>
-                  <p class="wishlist__price">{{ product.pay }}</p>
+                  <p class="wishlist__price">{{ product.pay|intcomma }}원</p>
                 </li>
               </a>
             {% endfor %}
