--- a/static/styles/review_modal.css
+++ b/static/styles/review_modal.css
@@ -25,30 +25,33 @@
 }
 .modalC {
 	position: absolute;
-	top: 50vh;
+	top: 5%;
 	left: 50%;
-	transform: translate(-50%, -30%);
-	max-width: 80rem;
+	transform: translate(-50%, 0%);
+	max-width: 80vh;
 	background: var(--bg);
 	padding: 5rem 6rem;
 	box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
 	z-index: 1000;
 	transition: all 0.5s;
+	overflow-y: auto;
 }
 .overlayC {
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100vh;
-	height: 100vw;
+	width: 100%;
+	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
 	backdrop-filter: blur(4px);
 	z-index: 100;
 	transition: all 0.5s;
+	overflow: auto;
 }
 .scroll-block {
 	overflow: hidden;
 }
+
 #product-detail #rev-modal-btn,
 #product-detail .qna-modal-btn {
 	font-weight: 700;
