--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% block body %}
 
-  <h1>안녕</h1>
+  <h1> {{ category }} 페이지 </h1>
   <a href="{% url 'products:products_create' %}">상품 작성</a>
   {% for product in products %}
     <div style='border:solid 1px black;'>
@@ -19,7 +19,18 @@
         <p>상품 상세설명 사진</p>
         <img src="{{ product.Description2.url }}" alt="" style='height:200px;'>
       </div>
+      <div>
+        <p>원가</p>
+        <p>{{ product.pay }} </p>
+      </div>
+      <div>
+        <p>할인가</p>
+        <p>{% widthratio product.pay -100 -100|add:product.sale %}</p>
+      </div>
+      <a href="{% url 'products:products_detail' product.pk %}">상세페이지</a>
     </div>
+
+    
   {% endfor %}
 </div>
 {% endblock body %}
