--- a/templates/base.html
+++ b/templates/base.html
@@ -56,10 +56,10 @@
     <div class="lnb-area">
       <div class="container">
         <ul class="lnb">
-          <li><a href="#">노트</a></li>
-          <li><a href="#">다이어리</a></li>
-          <li><a href="#">필기류</a></li>
-          <li><a href="#">파일, 바인더</a></li>
+          <li><a href="{% url 'products:note' %}">노트</a></li>
+          <li><a href="{% url 'products:diary' %}">다이어리</a></li>
+          <li><a href="{% url 'products:pencil' %}">필기류</a></li>
+          <li><a href="{% url 'products:file' %}">파일, 바인더</a></li>
         </ul>
       </div>
     </div>
