--- a/templates/base.html
+++ b/templates/base.html
@@ -3,81 +3,103 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="{% static 'img/tbt_favi.ico' %}" type="image/x-icon">
-  <link rel="icon" href="{% static 'img/tbt_favi.ico' %}" type="image/x-icon">
-  {% block css %}
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  {% bootstrap_css %}
-  <link rel="stylesheet" href="{% static 'styles/init.css' %}">
-  <link rel="stylesheet" href="{% static 'styles/main.css' %}">
-  <link rel="stylesheet" href="{% static 'styles/main_index.css' %}">
-  <link rel="stylesheet" href="{% static 'styles/accounts_form.css' %}">
-  <link rel="stylesheet" href="{% static 'styles/review_modal.css' %}">
-  {% endblock css %}
-  <title>TBT</title>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script defer src="{% static 'script/script.js' %}"></script>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="{% static 'img/tbt_favi.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'img/tbt_favi.ico' %}" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'styles/init.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/main_index.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/accounts_form.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/review_modal.css' %}">
+    {% block css %}{% endblock css %}
+    <title>TBT</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script defer="defer" src="{% static 'script/script.js' %}"></script>
 
-</head>
+  </head>
 
-<body>
-  <header id="header">
-    <div class="container">
-      <nav class="navi">
-        <div class="search-area">
-          <form action="" id="search-form">
-            <input type="text" placeholder="찾으시는 상품이 있나요?">
-            <button type="submit"><i class="bi bi-search"></i></button>
-          </form>
-        </div>
-        <div class="gnb-area">
-          <ul class="gnb">
-            {% if request.user.is_authenticated %}
-            <li><a href="{% url 'accounts:detail' request.user.pk %}">{{request.user}}</a></li>
-            <li><a href="{% url 'accounts:logout' %}">로그아웃</a></li>
-            {% else %}
-            <li><a href="{% url 'accounts:signup' %}">회원가입</a></li>
-            <li><a href="{% url 'accounts:login' %}">로그인</a></li>
-            {% endif %}
-            <li><a href="#">장바구니</a></li>
+  <body>
+    <header id="header">
+      <div class="container">
+        <nav class="navi">
+          <div class="search-area">
+            <form action="" id="search-form">
+              <input type="text" placeholder="찾으시는 상품이 있나요?">
+              <button type="submit">
+                <i class="bi bi-search"></i>
+              </button>
+            </form>
+          </div>
+          <div class="gnb-area">
+            <ul class="gnb">
+              {% if request.user.is_authenticated %}
+                <li>
+                  <a href="{% url 'accounts:detail' request.user.pk %}">{{request.user}}</a>
+                </li>
+                <li>
+                  <a href="{% url 'accounts:logout' %}">로그아웃</a>
+                </li>
+              {% else %}
+                <li>
+                  <a href="{% url 'accounts:signup' %}">회원가입</a>
+                </li>
+                <li>
+                  <a href="{% url 'accounts:login' %}">로그인</a>
+                </li>
+              {% endif %}
+              <li>
+                <a href="#">장바구니</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <div class="logo">
+        <a href="{% url 'index' %}">
+          <img src="{% static 'img/tbt_logo.svg' %}" alt="TBT logo">
+        </a>
+      </div>
+      <div class="lnb-area">
+        <div class="container">
+          <ul class="lnb">
+            <li>
+              <a href="#">노트</a>
+            </li>
+            <li>
+              <a href="#">다이어리</a>
+            </li>
+            <li>
+              <a href="#">필기류</a>
+            </li>
+            <li>
+              <a href="#">파일, 바인더</a>
+            </li>
           </ul>
         </div>
-      </nav>
-    </div>
-    <div class="logo">
-      <a href="{% url 'index' %}">
-        <img src="{% static 'img/tbt_logo.svg' %}" alt="TBT logo">
-      </a>
-    </div>
-    <div class="lnb-area">
-      <div class="container">
-        <ul class="lnb">
-          <li><a href="#">노트</a></li>
-          <li><a href="#">다이어리</a></li>
-          <li><a href="#">필기류</a></li>
-          <li><a href="#">파일, 바인더</a></li>
-        </ul>
       </div>
-    </div>
-  </header>
-  <main>
-    <div class="container">
-      <!-- main home -->
-      {% block index %}{% endblock index %}
-      <!-- body -->
-      {% block body %}{% endblock body %}
-    </div>
-  </main>
-  <footer>
-    <div id="footer">
-      <p>&copy; TEMBYTEM 2022</p>
-    </div>
-  </footer>
-  {% bootstrap_javascript %}
-</body>
+    </header>
+    <main>
+      <!-- 상품 목록 페이지 banner -->
+      {% block banner %}{% endblock banner %}
+      <div class="container">
+        <!-- main home -->
+        {% block index %}{% endblock index %}
+        <!-- body -->
+        {% block body %}{% endblock body %}
+      </div>
+    </main>
+    <footer>
+      <div id="footer">
+        <p>&copy; TEMBYTEM 2022</p>
+      </div>
+    </footer>
+    {% bootstrap_javascript %}
+    {% block js %}{% endblock js %}
+  </body>
 
 </html>
