--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -3,184 +3,168 @@
 {% load humanize %}
 
 {% block body %}
+  <section class="containers">
+    <p class="title text-center fw-semibold">
+      <span class="title__user">{{ user.nickname }}</span>
+      님의 마이페이지
+    </p>
 
-  <!DOCTYPE html>
-  <html lang="en">
-
-    <head>
-      <meta charset="UTF-8"/>
-      <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>프로필</title>
-      <link rel="stylesheet" href="{% static 'styles/accounts_detail.css' %}"/>
-    </head>
-
-    <body>
-      <section class="containers">
-        <p class="title text-center fw-semibold">
-          <span class="title__user">{{ user.nickname }}</span>
-          님의 마이페이지
-        </p>
-
-        <!-- 프로필 -->
-        <div class="profile__container rounded">
-          <div class="profile__content">
-            <div>
-              <img class="profile__img" src="{{ user.profile_image1 }}" alt="profile-img"/>
-              <p class="ms-3 mt-3">
-                <span class="profile__name">{{ user.nickname }}</span>
-                님</p>
+    <!-- 프로필 -->
+    <div class="profile__container rounded">
+      <div class="profile__content">
+        <div>
+          <img class="profile__img" src="{{ user.profile_image1 }}" alt="profile-img"/>
+          <p class="ms-3 mt-3">
+            <span class="profile__name">{{ user.nickname }}</span>
+            님</p>
+        </div>
+        <div class="profile__middle">
+          <div class="follow">
+            <div class="follow__container">
+              <span class="follow__cnt text-center" id="followings-count">{{ user.followings.all|length }}</span>
+              <span class="follow__title">팔로잉</span>
             </div>
-            <div class="profile__middle">
-              <div class="follow">
-                <div class="follow__container">
-                  <span class="follow__cnt text-center" id="followings-count">{{ user.followings.all|length }}</span>
-                  <span class="follow__title">팔로잉</span>
-                </div>
-                <div class="follow__container">
-                  <span class="follow__cnt text-center" id="followers-count">{{ user.followers.all|length }}</span>
-                  <span class="follow__title">팔로워</span>
-                </div>
-              </div>
-              {% if request.user.is_authenticated %}
-                {% if request.user != user %}
-                  <form id="follow-form" data-user-id="{{ user.pk }}" data-my-id="{{ my.pk }}">
-                    {% csrf_token %}
-                    {% if request.user in user.followings.all %}
-                      <button type="submit" class="follow__btn" id="follow-btn">follow</button>
-                    {% else %}
-                      <button type="submit" class="unfollow__btn" id="follow-btn">unfollow</button>
-                    {% endif %}
-                  </form>
+            <div class="follow__container">
+              <span class="follow__cnt text-center" id="followers-count">{{ user.followers.all|length }}</span>
+              <span class="follow__title">팔로워</span>
+            </div>
+          </div>
+          {% if request.user.is_authenticated %}
+            {% if request.user != user %}
+              <form id="follow-form" data-user-id="{{ user.pk }}" data-my-id="{{ my.pk }}">
+                {% csrf_token %}
+                {% if request.user in user.followings.all %}
+                  <button type="submit" class="follow__btn" id="follow-btn">follow</button>
                 {% else %}
-                  {% if request.user.pk == user.pk %}
-                    <a href="{% url "accounts:update"%}">
-                      <button class="update__btn">회원 정보 수정</button>
-                    </a>
-                  {% endif %}
+                  <button type="submit" class="unfollow__btn" id="follow-btn">unfollow</button>
                 {% endif %}
+              </form>
+            {% else %}
+              {% if request.user.pk == user.pk %}
+                <a href="{% url "accounts:update"%}">
+                  <button class="update__btn">회원 정보 수정</button>
+                </a>
               {% endif %}
-            </div>
-            <div class="profile__bottom">
-              {% if request.user != user %}
-                <a class="profile__link--notuser" href="{% url 'accounts:review_list' user.pk %}">
-                  리뷰 목록
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill arrow" viewbox="0 0 16 16">
-                    <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                  </svg>
-                </a>
-              {% else %}
-                <a class="profile__link">
-                  주문 내역
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill arrow" viewbox="0 0 16 16">
-                    <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                  </svg>
-                </a>
-                <a class="profile__link" href="{% url 'accounts:review_list' user.pk %}">
-                  리뷰 목록
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill arrow" viewbox="0 0 16 16">
-                    <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
-                  </svg>
-                </a>
-
-              {% endif %}
-            </div>
-          </div>
-        </div>
-
-        <!-- 최근 주문 내역 -->
-        {% if request.user == user %}
-          <p class="sub__title">최근 주문 내역</p>
-          <section class="order__history">
-            <div class="order__history__category">
-              <span class="order__category__number">주문 번호</span><span class="order__category__title">주문 상품</span><span class="order__category__status">주문 상태</span>
-            </div>
-            <!-- 보이는 아이템 -->
-            <div class="order__items show__order">
-              <div class="order__history__container">
-                <span class="order__number">000584858</span>
-                <img class="order__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/413/B004136948.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="order-img"/>
-                <span class="order__title">모모씨 베어 키링 (6종)</span>
-                <span class=" order__status">상품 준비중</span>
-              </div>
-              <!-- 숨기는 아이템 -->
-              <div class="hide__order hidden">
-                <div class="order__history__container">
-                  <span class="order__number">000584858</span>
-                  <img class="order__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/413/B004136948.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="order-img"/>
-                  <span class="order__title">모모씨 베어 키링 (6종)</span>
-                  <span class=" order__status">상품 준비중</span>
-                </div>
-                <div class="order__history__container">
-                  <span class="order__number">000584858</span>
-                  <img class="order__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/413/B004136948.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="order-img"/>
-                  <span class="order__title">모모씨 베어 키링 (6종)</span>
-                  <span class=" order__status">상품 준비중</span>
-                </div>
-              </div>
-            </div>
-            <svg class="bi bi-caret-down-fill arrow__down" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewbox="0 0 16 16">
-              <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
-            </svg>
-
-          </section>
-        {% endif %}
-
-        <!-- 최근 리뷰 -->
-        <div class="main__title">
-          <p class="sub__title">최근 리뷰</p>
-          <a class="plus__title" href="{% url 'accounts:review_list' user.pk %}">더보기 ></a>
-        </div>
-        <section class="review">
-          <div class="review__category">
-            <span class="category__name">상품 이름</span><span class="category__grade">평점</span><span class="category__title">리뷰 제목</span>
-          </div>
-          <hr class="line"/>
-          <!-- 내가쓴 리뷰 목록 -->
-          {% for review in reviews %}
-            <div class="review__container">
-              <a href="{% url 'products:products_detail' review.product.pk %}">
-                <img class="review__img" src="{{ review.product.product_image.all.first.image.url }}" alt="review-img"/>
-                <span class="review__name">{{ review.product.name }}</span>
-              </a>
-              <span class="review__grade">
-                <!-- 개행 방지 -->
-                <svg class="bi bi-star-fill" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewbox="0 0 16 16">
-                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                </svg>
-                <!-- 개행 방지 -->
-                {{ review.grade }}</span>
-              <span class="review__title">{{ review.title }}</span>
-            </div>
-          {% endfor %}
-
-        </section>
-
-        <!-- Wish List -->
-        <div class="main__title">
-          <p class="sub__title">Wish List</p>
-          <a class="plus__title" href="{% url 'accounts:wishlist' user.pk %}">더보기 ></a>
-        </div>
-        <div class="wishlist__content">
-          {% if user.like_products.all %}
-            {% for product in user.like_products.all %}
-              <a href="{% url "products:products_detail" product.pk %}">
-                <div class="wishlist__box">
-                  <img class="wishlist__img" src="{{ product.product_image.all.first.image.url }}" alt="wishlist-img"/>
-                  <p class="wishlist__title">{{ product.name }}</p>
-                  <p class="wishlist__price">{{ product.pay|intcomma }}원</p>
-                </a>
-              </div>
-            {% endfor %}
+            {% endif %}
           {% endif %}
         </div>
+        <div class="profile__bottom">
+          {% if request.user != user %}
+            <a class="profile__link--notuser" href="{% url 'accounts:review_list' user.pk %}">
+              리뷰 목록
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill arrow" viewbox="0 0 16 16">
+                <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+              </svg>
+            </a>
+          {% else %}
+            <a class="profile__link">
+              주문 내역
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill arrow" viewbox="0 0 16 16">
+                <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+              </svg>
+            </a>
+            <a class="profile__link" href="{% url 'accounts:review_list' user.pk %}">
+              리뷰 목록
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill arrow" viewbox="0 0 16 16">
+                <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+              </svg>
+            </a>
+
+          {% endif %}
+        </div>
+      </div>
+    </div>
+
+    <!-- 최근 주문 내역 -->
+    {% if request.user == user %}
+      <p class="sub__title">최근 주문 내역</p>
+      <section class="order__history">
+        <div class="order__history__category">
+          <span class="order__category__number">주문 번호</span><span class="order__category__title">주문 상품</span><span class="order__category__status">주문 상태</span>
+        </div>
+        <!-- 보이는 아이템 -->
+        <div class="order__items show__order">
+          <div class="order__history__container">
+            <span class="order__number">000584858</span>
+            <img class="order__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/413/B004136948.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="order-img"/>
+            <span class="order__title">모모씨 베어 키링 (6종)</span>
+            <span class=" order__status">상품 준비중</span>
+          </div>
+          <!-- 숨기는 아이템 -->
+          <div class="hide__order hidden">
+            <div class="order__history__container">
+              <span class="order__number">000584858</span>
+              <img class="order__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/413/B004136948.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="order-img"/>
+              <span class="order__title">모모씨 베어 키링 (6종)</span>
+              <span class=" order__status">상품 준비중</span>
+            </div>
+            <div class="order__history__container">
+              <span class="order__number">000584858</span>
+              <img class="order__img" src="http://thumbnail.10x10.co.kr/webimage/image/basic600/413/B004136948.jpg?cmd=thumb&w=500&h=500&fit=true&ws=false" alt="order-img"/>
+              <span class="order__title">모모씨 베어 키링 (6종)</span>
+              <span class=" order__status">상품 준비중</span>
+            </div>
+          </div>
+        </div>
+        <svg class="bi bi-caret-down-fill arrow__down" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewbox="0 0 16 16">
+          <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+        </svg>
+
       </section>
+    {% endif %}
 
-      <!-- JavaScript Bundle with Popper -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    </body>
+    <!-- 최근 리뷰 -->
+    <div class="main__title">
+      <p class="sub__title">최근 리뷰</p>
+      <a class="plus__title" href="{% url 'accounts:review_list' user.pk %}">더보기 ></a>
+    </div>
+    <section class="review">
+      <div class="review__category">
+        <span class="category__name">상품 이름</span><span class="category__grade">평점</span><span class="category__title">리뷰 제목</span>
+      </div>
+      <hr class="line"/>
+      <!-- 내가쓴 리뷰 목록 -->
+      {% for review in reviews %}
+        <div class="review__container">
+          <a href="{% url 'products:products_detail' review.product.pk %}">
+            <img class="review__img" src="{{ review.product.product_image.all.first.image.url }}" alt="review-img"/>
+            <span class="review__name">{{ review.product.name }}</span>
+          </a>
+          <span class="review__grade">
+            <!-- 개행 방지 -->
+            <svg class="bi bi-star-fill" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewbox="0 0 16 16">
+              <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+            </svg>
+            <!-- 개행 방지 -->
+            {{ review.grade }}</span>
+          <span class="review__title">{{ review.title }}</span>
+        </div>
+      {% endfor %}
 
-  </html>
+    </section>
+
+    <!-- Wish List -->
+    <div class="main__title">
+      <p class="sub__title">Wish List</p>
+      <a class="plus__title" href="{% url 'accounts:wishlist' user.pk %}">더보기 ></a>
+    </div>
+    <div class="wishlist__content">
+      {% if user.like_products.all %}
+        {% for product in user.like_products.all %}
+          <a href="{% url "products:products_detail" product.pk %}">
+            <div class="wishlist__box">
+              <img class="wishlist__img" src="{{ product.product_image.all.first.image.url }}" alt="wishlist-img"/>
+              <p class="wishlist__title">{{ product.name }}</p>
+              <p class="wishlist__price">{{ product.pay|intcomma }}원</p>
+            </a>
+          </div>
+        {% endfor %}
+      {% endif %}
+    </div>
+  </section>
+{% endblock body %}
+
+{% block js %}
   <script>
     const hide = document.querySelector('.hide__order');
     const arrowBtn = document.querySelector('.arrow__down');
@@ -193,9 +177,4 @@
         .toggle('hidden');
     }
   </script>
-
-</body>
-
-</html>
-
-{% endblock body %}
+{% endblock js %}
