--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -4,22 +4,22 @@
 {% load index_tag %}
 
 {% block css %}
-  <link rel="stylesheet" href="{% static 'styles/pdt-index.css' %} ">
+  <link rel="stylesheet" href="{% static 'styles/product_index.css' %} ">
 {% endblock css %}
 
 {% block banner %}
 {% comment %} 배너 {% endcomment %}
 <section class='pdt-banner'>
-  {% if category == '노트' %}
+  {% if category == 'note' %}
   <img src="{% static 'img/notepad.jpg' %}" alt="">
-  <h1>노트</h1>
-  {% elif category == '다이어리' %}
+  <h1>노트/메모지</h1>
+  {% elif category == 'diary' %}
   <img src="{% static 'img/diary.jpg' %}" alt="">
   <h1>다이어리</h1>
-  {% elif category == '필기류' %}
+  {% elif category == 'pencil' %}
   <img src="{% static 'img/writing.jpg' %}" alt="">
-  <h1>필기류</h1>
-  {% elif category == '파일' %}
+  <h1>필기류/필통</h1>
+  {% elif category == 'file' %}
   <img src="{% static 'img/files.jpg' %}" alt="">
   <h1>파일/바인더</h1>
   {% endif %}
@@ -29,11 +29,11 @@
   <div class="dropdown container">
     <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
     </button>
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item active" href="#">등록일순</a></li>
-      <li><a class="dropdown-item" href="#">높은할인률순</a></li>
-      <li><a class="dropdown-item" href="#">높은가격순</a></li>
-      <li><a class="dropdown-item" href="#">낮은가격순</a></li>
+    <ul class="dropdown-menu" name='filter'>
+      <li><a class="dropdown-item active" href="/products/{{ category }}?filter=registor">등록일순</a></li>
+      <li><a class="dropdown-item" href="/products/{{ category }}?filter=high-sale">높은할인률순</a></li>
+      <li><a class="dropdown-item" href="/products/{{ category }}?filter=high-price">높은가격순</a></li>
+      <li><a class="dropdown-item" href="/products/{{ category }}?filter=low-price">낮은가격순</a></li>
     </ul>
   </div>
 </section>
@@ -70,5 +70,6 @@
 {% endblock body %}
 
 {% block js %}
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="{% static 'script/pdt-index.js' %}"></script>
 {% endblock js %}
