상품 상세 페이지 breadcrumb 생성

--- a/products/templates/products/products_detail.html
+++ b/products/templates/products/products_detail.html
@@ -1,9 +1,42 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
 {% load static %}
+
+{% block css %}
+  <link rel="stylesheet" href="{% static 'styles/product_detail.css' %}">
+{% endblock css %}
+
 {% block body %}
+  {% comment %} breadcrumb {% endcomment %}
+  <nav class='pdt-breadcrumb' style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item">
+        <a href="/">홈</a>
+      </li>
+      <li class="breadcrumb-item">
+        {% if products.category == '노트/메모지' %}
+        <a href="{% url 'products:note' %}">
+          {{ products.category }}
+        </a>
+        {% elif products.category == '다이어리' %}
+        <a href="{% url 'products:diary' %}">
+          {{ products.category }}
+        </a>
+        {% elif products.category == '필기류/필통' %}
+        <a href="{% url 'products:pencil' %}">
+          {{ products.category }}
+        </a>
+        {% elif products.category == '파일/바인더' %}
+        <a href="{% url 'products:file' %}">
+          {{ products.category }}
+        </a>
+        {% endif %}
+      </li>
+      <li class="breadcrumb-item active" aria-current="page">{{ products.name }}</li>
+    </ol>
+  </nav>
+  {% comment %} 상품 정보 {% endcomment %}
   <div id="product-detail">
-    <a href="{% url 'products:index' %} ">상품 목록 페이지</a>
     <!-- 찜하기 비동기 구현 -->
     {% if request.user.is_authenticated %}
       <div>
@@ -224,3 +257,5 @@
     })
   </script>
 {% endblock body %}
+
+{% block js %}{% endblock js %}
