wishlist 배열 오류 수정

--- a/accounts/templates/accounts/wishlist.html
+++ b/accounts/templates/accounts/wishlist.html
@@ -15,27 +15,28 @@
       <button class="delete__btn">삭제하기</button>
     </div>
     <!-- 찜 목록 -->
-
-    <ul class="wishlist__content">
+    <div class="wishlist__content wishlist__container">
       {% if user.like_products.all %}
         {% for product in user.like_products.all %}
-          <a href="{% url "products:products_detail" product.pk %}">
-            <li class="wishlist__box">
+          <div class="wishlist__box">
+            <a href="{% url "products:products_detail" product.pk %}">
               <input class="checkbox" type="checkbox" name="answer[]" id="opt-in"/>
               <img class="wishlist__img" src="{{ product.product_image.all.first.image.url }}" alt="wishlist-img"/>
               <p class="wishlist__title">{{ product.name }}</p>
               <p class="wishlist__price">{{ product.pay|intcomma }}원</p>
-            </li>
-          </a>
+            </a>
+          </div>
         {% endfor %}
       {% endif %}
-    </ul>
+    </div>
     <div class="ment text-center">
       <p class="info">
         더 많은 상품을
         <span class="info__wishlist">🎁위시리스트</span>에 담아보세요 :)
       </p>
-      <p class="goto">쇼핑 바로 가기</p>
+      <p class="goto">
+        <a href={% url 'products:index' %}>쇼핑 바로 가기</a>
+      </p>
     </div>
   </section>
 
