make_pdt_DB 파일 수정, pdt index페이지 수정

--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -25,7 +25,7 @@
   {% endif %}
 </section>
 {% comment %} 분류 필터 {% endcomment %}
-<section class='pdt-filter' data-filter='high-sale'>
+<section class='pdt-filter' data-filter='{{ filter }}'>
   <div class="dropdown container">
     <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
     </button>
