--- a/templates/base.html
+++ b/templates/base.html
@@ -19,10 +19,9 @@
   <link rel="stylesheet" href="{% static 'styles/wishlist.css' %}?after" />
   <link rel="stylesheet" href="{% static 'styles/accounts_review_list.css' %}" />
   <link rel="stylesheet" href="{% static 'styles/review_modal.css' %}">
-  {% block css %}{% endblock css %}
   <title>TBT</title>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script defer="defer" src="{% static 'script/script.js' %}"></script>
+  <script defer src="{% static 'script/script.js' %}"></script>
 
 </head>
 
