--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{% static 'styles/main_index.css' %}">
     <link rel="stylesheet" href="{% static 'styles/accounts_form.css' %}">
     <link rel="stylesheet" href="{% static 'styles/accounts_detail.css' %}"/>
-    <link rel="stylesheet" href="{% static 'styles/wishlist.css' %}?after"/>
+    <link rel="stylesheet" href="{% static 'styles/wishlist.css' %}"/>
     <link rel="stylesheet" href="{% static 'styles/accounts_review_list.css' %}"/>
     <link rel="stylesheet" href="{% static 'styles/review_modal.css' %}">
     {% block css %}{% endblock css %}
