--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -12,9 +12,9 @@
     <!-- 프로필 -->
     <div class="profile__container rounded">
       <div class="profile__content">
-        <div>
+        <div class="text-center">
           <img class="profile__img" src="{{ user.profile_image1 }}" alt="profile-img"/>
-          <p class="ms-3 mt-3">
+          <p>
             <span class="profile__name">{{ user.nickname }}</span>
             님</p>
         </div>
@@ -118,28 +118,32 @@
       <p class="sub__title">최근 리뷰</p>
       <a class="plus__title" href="{% url 'accounts:review_list' user.pk %}">더보기 ></a>
     </div>
-    <section class="review">
+    <section>
       <div class="review__category">
         <span class="category__name">상품 이름</span><span class="category__grade">평점</span><span class="category__title">리뷰 제목</span>
       </div>
       <hr class="line"/>
       <!-- 내가쓴 리뷰 목록 -->
-      {% for review in reviews %}
-        <div class="review__container">
-          <a href="{% url 'products:products_detail' review.product.pk %}">
-            <img class="review__img" src="{{ review.product.product_image.all.first.image.url }}" alt="review-img"/>
-            <span class="review__name">{{ review.product.name }}</span>
-          </a>
-          <span class="review__grade">
-            <!-- 개행 방지 -->
-            <svg class="bi bi-star-fill" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewbox="0 0 16 16">
-              <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-            </svg>
-            <!-- 개행 방지 -->
-            {{ review.grade }}</span>
-          <span class="review__title">{{ review.title }}</span>
-        </div>
-      {% endfor %}
+      {% if not reviews %}
+        <h1 class="empty">리뷰가 없어요 :(</h1>
+      {% else %}
+        {% for review in reviews %}
+          <div class="review review__container">
+            <a href="{% url 'products:products_detail' review.product.pk %}">
+              <img class="review__img" src="{{ review.product.product_image.all.first.image.url }}" alt="review-img"/>
+              <span class="review__name">{{ review.product.name }}</span>
+            </a>
+            <span class="review__grade">
+              <!-- 개행 방지 -->
+              <svg class="bi bi-star-fill" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewbox="0 0 16 16">
+                <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+              </svg>
+              <!-- 개행 방지 -->
+              {{ review.grade }}</span>
+            <span class="review__title">{{ review.title }}</span>
+          </div>
+        {% endfor %}
+      {% endif %}
 
     </section>
 
@@ -148,9 +152,10 @@
       <p class="sub__title">Wish List</p>
       <a class="plus__title" href="{% url 'accounts:wishlist' user.pk %}">더보기 ></a>
     </div>
+    <section class="wishlist">
     <div class="wishlist__content">
       {% if user.like_products.all %}
-        {% for product in user.like_products.all %}
+        {% for product in user.like_products.all|slice:":4" %}
           <a href="{% url "products:products_detail" product.pk %}">
             <div class="wishlist__box">
               <img class="wishlist__img" src="{{ product.product_image.all.first.image.url }}" alt="wishlist-img"/>
@@ -159,8 +164,11 @@
             </a>
           </div>
         {% endfor %}
+      {% else%}
+      <h1 class="empty">위시리스트가 없어요 :(</h1>
       {% endif %}
     </div>
+  </section>
   </section>
 {% endblock body %}
 
