--- a/static/styles/wishlist.css
+++ b/static/styles/wishlist.css
@@ -1,6 +1,6 @@
 @import url(./main.css);
 
-.containers {
+.wishlist__container{
   padding: 0 10%;
 }
 
@@ -51,8 +51,8 @@
 
 /* 찜 사진 */
 
-.wishlist__container {
-  margin-top: 5.5rem;
+.wishlist__list{
+  margin-top: 6.5rem;
   padding-bottom: 3rem;
   min-height: 20vh;
 }
