--- a/static/styles/main_index.css
+++ b/static/styles/main_index.css
@@ -67,6 +67,7 @@
 	width: 1rem;
 	border-radius: 50%;
 	margin-right: 1.75rem;
+	box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.7);
 	cursor: pointer;
 	transition: all 0.5s;
 }
