--- a/templates/base.html
+++ b/templates/base.html
@@ -18,11 +18,11 @@
   <link rel="stylesheet" href="{% static 'styles/accounts_detail.css' %}" />
   <link rel="stylesheet" href="{% static 'styles/wishlist.css' %}?after" />
   <link rel="stylesheet" href="{% static 'styles/accounts_review_list.css' %}" />
+  {% block css %} {% endblock css %}
   <link rel="stylesheet" href="{% static 'styles/review_modal.css' %}">
   <title>TBT</title>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script defer src="{% static 'script/script.js' %}"></script>
-
 </head>
 
 <body>
